format: fixed compilaton error created by cleaning